gtkhex: Bugfixes to layout manager.
This allows us to lay out the widget with CSS and not worry about any
characters being cut off.

Next step in this avenue would be to tweak further, especially the
allocation - not of the widget itself, but of the number of characters
that can be drawn on the hex widget.

--- a/src/ghex.css
+++ b/src/ghex.css
@@ -21,16 +21,18 @@
 }
 
 .hex #offsets {
-	background-color: shade(@theme_bg_color, 0.95);
-	padding-left: 8px;
+        padding-left: 12px;
+	padding-right: 12px;
 	border-right: solid @borders 2px;
+	background-color: shade(@theme_bg_color, 0.9);
 }
 
 .hex #hex-display {
-	border-right: dotted 2px @borders;
-	padding-left: 8px;
+        border-right: dotted 2px @borders;
+        padding-left: 12px;
 }
 
 .hex #ascii-display {
-	padding-left: 8px;
+        padding-left: 12px;
 }
+
